# DigitalShelf

./: .gitignore  DigitalShelf.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  shelf_item.rs  storage.rs  thumbnail.rs
src-tauri/src/commands/: drag_out.rs  mod.rs  settings.rs  shelf_ops.rs
src/components/: DropOverlay.tsx  Shelf.tsx  ShelfCard.tsx  TitleBar.tsx  TransparencySlider.tsx
src/hooks/: useDragDrop.ts  useSettings.ts  useShelfItems.ts
src/styles/: card.css  global.css  shelf.css  titlebar.css
src/types/: shelf.ts
src/utils/: fileIcons.ts
