[package]
name = "digital-shelf"
version = "0.1.2"
description = "A visual temporary clipboard dropzone"
authors = ["Hasnain"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
mime_guess = "2"
tauri-plugin-drag = "2.1.0"
